--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "NODE_ENV=development nodemon",
     "prebuild": "rd /s /q dist",
     "build": "tsc -p tsconfig.build.json",
-    "prod": "NODE_ENV=production node dist/server.js"
+    "prod": "NODE_ENV=production node dist/server.js",
+    "migration:run": "prisma migrate deploy",
+    "migration:generate": "prisma migrate dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
@@ -19,12 +22,14 @@
     "express-async-errors": "^3.1.1",
     "http-status": "^1.7.4",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.26",
     "nodemon": "^3.1.0",
     "prisma": "^5.11.0",
